remove draw face

--- a/examples/clm_emotiondetection.html
+++ b/examples/clm_emotiondetection.html
@@ -235,7 +235,7 @@
 					overlayCC.clearRect(0, 0, vid_width, vid_height);
 					//psrElement.innerHTML = "score :" + ctrack.getScore().toFixed(4);
 					if (ctrack.getCurrentPosition()) {
-						ctrack.draw(overlay);
+						// ctrack.draw(overlay);
 					}
 					var cp = ctrack.getCurrentParameters();
 
